tests/ui/async-await/issues/issue-78654.min.stderr
error[E0573]: cannot find type `feature` in this scope
  --> $DIR/issue-78654.rs:9:15
   |
LL | impl<const H: feature> Foo {
   |               ^^^^^^^ not found in this scope
   |
   = note: a built-in attribute named `feature` exists in another namespace

error[E0207]: the const parameter `H` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-78654.rs:9:6
   |
LL | impl<const H: feature> Foo {
   |     -^^^^^^^^^^^^^^^^-
   |     ||
   |     |unconstrained const parameter
   |     help: remove the unused type parameter `H`
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0573.
For more information about an error, try `rustc --explain E0207`.
